--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -13,12 +13,12 @@
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="146dp"
-        android:layout_marginStart="146dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="16dp"
         android:text="Score"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        app:layout_constraintBaseline_toBaselineOf="@+id/textScore"
-        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         tools:layout_constraintBaseline_creator="1"
         tools:layout_constraintLeft_creator="1" />
 
@@ -26,12 +26,11 @@
         android:id="@+id/textScore"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="44dp"
-        android:layout_marginStart="44dp"
-        android:layout_marginTop="49dp"
+        android:layout_marginLeft="121dp"
+        android:layout_marginTop="16dp"
         android:text="0"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        app:layout_constraintLeft_toRightOf="@+id/textView2"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:layout_constraintLeft_creator="1"
         tools:layout_constraintTop_creator="1" />
@@ -40,10 +39,12 @@
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="31dp"
+        android:layout_marginRight="65dp"
+        android:layout_marginTop="16dp"
         android:text="Level"
-        app:layout_constraintLeft_toLeftOf="@+id/textView2"
-        app:layout_constraintTop_toBottomOf="@+id/textView2"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         tools:layout_constraintLeft_creator="1"
         tools:layout_constraintTop_creator="1" />
 
@@ -51,12 +52,12 @@
         android:id="@+id/levelText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="1dp"
-        android:layout_marginRight="1dp"
-        android:layout_marginTop="31dp"
+        android:layout_marginRight="22dp"
+        android:layout_marginTop="16dp"
         android:text="1"
-        app:layout_constraintRight_toLeftOf="@+id/textScore"
-        app:layout_constraintTop_toBottomOf="@+id/textScore"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         tools:layout_constraintRight_creator="1"
         tools:layout_constraintTop_creator="1" />
 
@@ -64,23 +65,28 @@
         android:id="@+id/textWatchGo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="36dp"
+        android:layout_marginBottom="55dp"
+        android:layout_marginLeft="6dp"
+        android:layout_marginTop="55dp"
         android:text="Ready?"
-        app:layout_constraintLeft_toLeftOf="@+id/textView4"
-        app:layout_constraintTop_toBottomOf="@+id/textView4"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        app:layout_constraintBottom_toTopOf="@+id/button2"
+        app:layout_constraintStart_toEndOf="@+id/button1"
+        app:layout_constraintTop_toBottomOf="@+id/textScore"
         tools:layout_constraintLeft_creator="1"
         tools:layout_constraintTop_creator="1" />
 
     <Button
         android:id="@+id/button1"
-        style="@style/Widget.AppCompat.Button.Colored"
+        android:background="#fff"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:onClick="buttonClick"
         android:text="1"
+        android:textColor="#000"
         app:layout_constraintBottom_toBottomOf="@+id/button2"
-        app:layout_constraintLeft_toLeftOf="@+id/button3"
-        app:layout_constraintRight_toRightOf="@+id/button3"
+        app:layout_constraintEnd_toEndOf="@+id/button3"
+        app:layout_constraintStart_toStartOf="@+id/button3"
         app:layout_constraintTop_toTopOf="@+id/button2"
         tools:layout_constraintBottom_creator="1"
         tools:layout_constraintLeft_creator="1"
@@ -89,33 +95,33 @@
 
     <Button
         android:id="@+id/button2"
-        style="@style/Widget.AppCompat.Button.Colored"
-        android:layout_width="135dp"
+        android:layout_width="0dp"
         android:layout_height="77dp"
-        android:layout_marginBottom="24dp"
-        android:layout_marginEnd="25dp"
-        android:layout_marginRight="25dp"
-        android:backgroundTint="@android:color/holo_blue_bright"
+        android:layout_marginBottom="169dp"
+        android:layout_marginTop="170dp"
+        android:background="#fff"
         android:onClick="buttonClick"
         android:text="2"
+        android:textColor="#000"
         android:textColorLink="@android:color/holo_green_light"
-        app:layout_constraintBottom_toTopOf="@+id/button4"
-        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/replayBtn"
+        app:layout_constraintEnd_toEndOf="@+id/button4"
+        app:layout_constraintStart_toStartOf="@+id/button4"
+        app:layout_constraintTop_toTopOf="@+id/textView4"
         tools:layout_constraintBottom_creator="1"
         tools:layout_constraintRight_creator="1" />
 
     <Button
         android:id="@+id/button3"
-        style="@style/Widget.AppCompat.Button.Colored"
         android:layout_width="135dp"
         android:layout_height="0dp"
         android:layout_marginLeft="16dp"
-        android:layout_marginStart="16dp"
-        android:backgroundTint="@android:color/holo_red_dark"
+        android:background="#fff"
         android:onClick="buttonClick"
         android:text="3"
+        android:textColor="#000"
         app:layout_constraintBottom_toBottomOf="@+id/button4"
-        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/button4"
         tools:layout_constraintBottom_creator="1"
         tools:layout_constraintLeft_creator="1"
@@ -123,17 +129,18 @@
 
     <Button
         android:id="@+id/button4"
-        style="@style/Widget.AppCompat.Button.Colored"
-        android:layout_width="0dp"
+        android:layout_width="135dp"
         android:layout_height="77dp"
-        android:layout_marginBottom="27dp"
-        android:backgroundTint="@android:color/holo_purple"
-
+        android:textColor="#000"
+        android:layout_marginBottom="108dp"
+        android:layout_marginRight="37dp"
+        android:layout_marginTop="109dp"
+        android:background="#fff"
         android:onClick="buttonClick"
         android:text="4"
-        app:layout_constraintBottom_toTopOf="@+id/replayBtn"
-        app:layout_constraintLeft_toLeftOf="@+id/button2"
-        app:layout_constraintRight_toRightOf="@+id/button2"
+        app:layout_constraintBottom_toBottomOf="@+id/replayBtn"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/button2"
         tools:layout_constraintBottom_creator="1"
         tools:layout_constraintLeft_creator="1"
         tools:layout_constraintRight_creator="1" />
@@ -142,13 +149,13 @@
         android:id="@+id/replayBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="28dp"
+        android:layout_marginBottom="31dp"
         android:backgroundTint="?android:attr/colorActivatedHighlight"
         android:onClick="buttonClick"
         android:text="Play"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         tools:layout_constraintBottom_creator="1"
         tools:layout_constraintLeft_creator="1"
         tools:layout_constraintRight_creator="1" />
